Added sign-up functionality, pushing a user into users table

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -6,6 +6,6 @@ html(lang='en')
 		include navigation.pug
 		title Your profile
 	body
-		h4 Name
-		each hit in userpostings
-		h3=hit.posting
+		h4=username
+		//- each hit in userpostings
+		//- h3=hit.posting
