--- a/views/profile.pug
+++ b/views/profile.pug
@@ -6,6 +6,7 @@ html(lang='en')
 		include navigation.pug
 		title Your profile
 	body
+		h4 Welcome to your profile
 		h4=username
 		//- each hit in userpostings
 		//- h3=hit.posting
