Security save before changing code

--- a/views/post.pug
+++ b/views/post.pug
@@ -10,6 +10,7 @@ html(lang='en')
 			h4=postingcontent
 		h3 What other users said about this:
 			p=comments
+			p=name
 		//- each hit in comments
 		//- 	p=hit.comment
 		//- 	p _____
