--- a/views/profile.pug
+++ b/views/profile.pug
@@ -7,6 +7,7 @@ html(lang='en')
 		title Your profile
 	body
 		h4 Welcome to your profile
-		h4=username
+		h4=user
+		p=userpostings
 		//- each hit in userpostings
 		//- h3=hit.posting
