--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,8 +6,7 @@ html(lang='en')
 		include navigation.pug
 		title Sign Up
 	body
-		h4 Great, you want to be part of our network. 
-		h4 Good news: You are just one step away..
+		h4 Great, you want to be part of our network. You're only one step away from it..
 		p=message
 		form.col.s12(action='/signup', method='POST', autocomplete='off' id='form')
 			label(for='username') Choose a username
