--- a/views/addpost.pug
+++ b/views/addpost.pug
@@ -6,11 +6,11 @@ html(lang='en')
 		include navigation.pug
 		title Add A Post
 	body
-		form.col.s12(action='/addpost', method='POST', autocomplete='off' id='form')
+		form.col.s12(action='/post', method='POST', autocomplete='off' id='form')
 			label(for='name') What Do You Want To Say
 			br
 			br
 			input#name.validate(type='text', name='posting')
 			br
 			br
-			input#seepreview.mybutton(href= '/post', type='submit', name='submit', value="Publish Post")
+			input#seepreview.mybutton(type='submit', name='submit', value="Publish Post")
