--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -7,5 +7,4 @@ html(lang='en')
 		title All Postings
 	body
 		h4 This is what your network has to say...
-		each hit in allpostings
-		h3=hit.postingcontent
+		h3=allpostings
