Security save before changing code

--- a/views/addpost.pug
+++ b/views/addpost.pug
@@ -6,7 +6,7 @@ html(lang='en')
 		include navigation.pug
 		title Add A Post
 	body
-		form.col.s12(action='/post', method='POST', autocomplete='off' id='form')
+		form.col.s12(action='/addpost', method='POST', autocomplete='off' id='form')
 			label(for='name') What Do You Want To Say
 			br
 			br
