--- a/views/addpost.pug
+++ b/views/addpost.pug
@@ -11,6 +11,7 @@ html(lang='en')
 			br
 			br
 			input#name.validate(type='text', name='posting')
+			//- input#postId(type='hidden', name='postId', value=postId)
 			br
 			br
 			input#seepreview.mybutton(type='submit', name='submit', value="Publish Post")
