After creating a post, the user will be redirected to an individual post URL. It is now also possible to write a comment for that specific post and write it in the database, where all dependencies are being logged correctly' ;

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -7,7 +7,5 @@ html(lang='en')
 		title Your profile
 	body
 		h4 Welcome to your profile
-		h4=user
-		p=userpostings
-		//- each hit in userpostings
-		//- h3=hit.posting
+		h4=user.name
+		p=user.post
