--- a/views/post.pug
+++ b/views/post.pug
@@ -9,13 +9,12 @@ html(lang='en')
 		h3 Read The Post:
 			h4#postingcontent=postingcontent
 		h3 What other users said about this:
-			p=comments
-			p=name
-		form.col.s12(action='/post', method='POST', autocomplete='off' id='form')
+			p=comments.comment
+		form.col.s12(action=`/comment/${postId}`, method='POST', autocomplete='off' id='form')
 			label(for='Comment') Anything to add?
 			br
 			br
 			input#name.validate(type='text', name='comment')
 			br
 			br
-			input#seepreview.mybutton(href= '/post', type='submit', name='submit', value="Publish Comment")
+			input#seepreview.mybutton(type='submit', name='submit', value="Publish Comment")
