Users can now see all their own comments on their profile page. Users can also find comments on /allcomments, but so far only their own ones.

--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -7,4 +7,7 @@ html(lang='en')
 		title All Postings
 	body
 		h4 This is what your network has to say...
-		h3=allpostings
+		each hit in allpostings
+			p=hit.post
+			p Created by #{hit.user.name} on #{hit.createdAt}
+
