--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -4,7 +4,7 @@ head
     #index-banner.section.no-pad-bot
       .container
         .row.center.mininav
-          a.mybutton.sml(href='/profile') MY PROFILE
+          a.mybutton.sml(href=`/profile/${username}`) MY PROFILE
           br
           a.mybutton.sml(href='/addpost') ADD POST
           br
