--- a/views/profile.pug
+++ b/views/profile.pug
@@ -9,4 +9,6 @@ html(lang='en')
 		h4 Welcome to your profile #{username}
 		h4 Check out all your posts below:
 		h4 ----------
-		h4=userpostings
+		each hit in alluserpostings
+			p=hit.post
+			p Created on #{hit.createdAt}
