--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,8 @@ html(lang='en')
 		include navigation.pug
 		title Home
 	body
-		p
+		h1 Welcome to The Avocado Net
+		h2 Where people only post about Avocados
 		p=message
 			form.col.s12(action='/', method='POST', autocomplete='off' id='signin')
 				label(for='username') Your Name
