--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,6 +4,7 @@ html(lang='en')
 		meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0')
 		include navigation.pug
+		include references.pug
 		title Sign Up
 	body
 		h4 Great, you want to be part of our network. You're only one step away from it..
@@ -20,3 +21,4 @@ html(lang='en')
 			br
 			br
 			input#seepreview.mybutton(type='submit', value="Create new account")
+	include references_footer.pug
