--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -4,12 +4,23 @@ html(lang='en')
 		meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0')
 		include navigation.pug
+		include references.pug
 		title All Postings
 	body
-		h1 This is what your network says about Avocados...
-		each hit in allpostings
-			p=hit.post
-			p Created by #{hit.user.name} on #{hit.createdAt}
-			a(href=`/posts/${hit.id}`) Read comments here
-			p .....
+		header.intro-header(style="background-image: url('/img/post-bg.jpg')")
+			.container
+				.row
+					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
+						.post-heading
+							h1 What other Avo-fans have to say
+		.container
+			.row
+				.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
+					.post-preview
+						each hit in allpostings
+							a(href=`/posts/${hit.id}`)
+								h2.post-title=hit.post
+								p.post-meta Created by #{hit.user.name} on #{hit.createdAt}
+								hr
+	include references_footer.pug
 
