--- a/views/home.pug
+++ b/views/home.pug
@@ -4,22 +4,33 @@ html(lang='en')
 		meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0')
 		include navigation.pug
+		include references.pug
 		title Home
 	body
-		h1 Welcome to The Avocado Net
-		h2 Where people only post about Avocados
-		p=message
-			form.col.s12(action='/', method='POST', autocomplete='off' id='signin')
-				label(for='username') Your Name
-				br
-				input#name.validate(type='text', name='username')
-				br
-				br
-				label(for='password') Your Password
-				br
-				input#password.validate(type='text', name='password')
-				br
-				br
-				input#seepreview.mybutton(type='submit', name='login', value="Login")
-		p You don't have an account yet? Sign up here.
-		a.mybutton.sml(href='/signup') Sign Up
+		// Page Header
+		// Set your background image for this header on the line below.
+		header.intro-header(style="background-image: url('/img/avocadobg.jpg')")
+			.container
+				.row
+					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
+						.site-heading
+							h1 The Avocado Net
+							hr.small
+							span.meta=message
+							form#signin(action='/', method='POST', autocomplete='off', novalidate)
+								div.form-group
+								label(for='username') YOUR NAME
+								br
+								input#name.validate(type='text', name='username')
+								br
+								br
+								label(for='password') YOUR PASSWORD
+								br
+								input#password.validate(type='text', name='password')
+								br
+								br
+								button.btn.btn-default#seepreview(type="submit", name="login") LOGIN
+							p You don't have an account yet?
+							a.btn.btn-default(href='/signup', role='button') Sign Up
+							p
+	include references_footer.pug
