--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,13 +1,26 @@
 doctype html
 html
 head
-    #index-banner.section.no-pad-bot
-      .container
-        .row.center.mininav
-          a.mybutton.sml(href=`/profile/${username}`) MY PROFILE
-          br
-          a.mybutton.sml(href='/addpost') ADD POST
-          br
-          a.mybutton.sml(href='/allpostings') ALL POSTINGS
-          br
-          a.mybutton.sml(href='/logout') LOGOUT
+	// Navigation
+	nav.navbar.navbar-default.navbar-custom.navbar-fixed-top
+		.container-fluid
+			// Brand and toggle get grouped for better mobile display
+			.navbar-header.page-scroll
+				button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+					span.sr-only Toggle navigation
+					|									Menu 
+					i.fa.fa-bars
+				a.navbar-brand(href='index.html') The Avocado Net
+			// Collect the nav links, forms, and other content for toggling
+			#bs-example-navbar-collapse-1.collapse.navbar-collapse
+				ul.nav.navbar-nav.navbar-right
+					li
+						a(href=`/profile/${username}`) MY PROFILE
+					li
+						a(href='/addpost') ADD POST
+					li
+						a(href='/allpostings') ALL POSTINGS
+					li
+						a(href='/logout') LOGOUT
+			// /.navbar-collapse
+		// /.container
