--- a/views/post.pug
+++ b/views/post.pug
@@ -7,7 +7,7 @@ html(lang='en')
 		include references.pug
 		title Posting Detail Page
 	body
-		header.intro-header(style="background-image: url('/img/post-bg.jpg')")
+		header.intro-header(style="background-image: url('/img/avocadobg2-green.png')")
 			.container
 				.row
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
