--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -7,7 +7,7 @@ html(lang='en')
 		include references.pug
 		title All Postings
 	body
-		header.intro-header(style="background-image: url('/img/post-bg.jpg')")
+		header.intro-header(style="background-image: url('/img/avocadobg2-purple.png')")
 			.container
 				.row
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
@@ -20,7 +20,7 @@ html(lang='en')
 						each hit in allpostings
 							a(href=`/posts/${hit.id}`)
 								h2.post-title=hit.post
-								p.post-meta Created by #{hit.user.name} on #{hit.createdAt}
+								p.post-meta Posted by #{hit.user.name} on #{hit.createdAt}
 								hr
 	include references_footer.pug
 
