--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -10,7 +10,7 @@ head
 					span.sr-only Toggle navigation
 					|									Menu 
 					i.fa.fa-bars
-				a.navbar-brand(href='index.html') The Avocado Net
+				a.navbar-brand(href='/') The Avocado Net
 			// Collect the nav links, forms, and other content for toggling
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				ul.nav.navbar-nav.navbar-right
