--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,18 +7,24 @@ html(lang='en')
 		include references.pug
 		title Sign Up
 	body
-		h4 Great, you want to be part of our network. You're only one step away from it..
-		p=message
-		form.col.s12(action='/signup', method='POST', autocomplete='off' id='form')
-			label(for='username') Choose a username
-			br
-			input#name.validate(type='text', name='username')
-			br
-			br
-			label(for='password') Choose a password
-			br
-			input#password.validate(type='text', name='password')
-			br
-			br
-			input#seepreview.mybutton(type='submit', value="Create new account")
+		header.intro-header(style="background-image: url('/img/avocadobg2-green.png')")
+			.container
+				.row
+					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
+						.site-heading
+							h1 Sign up for our network
+							hr.small
+							form.col.s12(action='/signup', method='POST', autocomplete='off' id='form')
+								label(for='username') Choose a username
+								br
+								br
+								input#name.validate(type='text', name='username')
+								br
+								br
+								label(for='password') Choose a password
+								br
+								input#password.validate(type='text', name='password')
+								br
+								br
+								button.btn.btn-default#signup(type="submit", name="submit") CREATE NEW ACCOUNT
 	include references_footer.pug
