Got most of it working, although still missing some details about personal profiles and css tweaks

--- a/views/home.pug
+++ b/views/home.pug
@@ -14,7 +14,7 @@ html(lang='en')
 				.row
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
 						.site-heading
-							h1 The Avocado Net
+							h1.headline The Avocado Net
 							hr.small
 							span.meta=message
 							form#signin(action='/', method='POST', autocomplete='off')
