--- a/views/profile.pug
+++ b/views/profile.pug
@@ -12,7 +12,7 @@ html(lang='en')
 				.row
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
 						.post-heading
-							h1 Your Avocado Profile #{username} 
+							h1 #{username}'s Avocado Profile 
 		.container
 			.row
 				.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
