--- a/views/references.pug
+++ b/views/references.pug
@@ -1,8 +1,10 @@
 doctype html
 html(lang='en')
 	head
-		// Bootstrap Core CSS
+	// Bootstrap Core CSS
 	link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
+	//Custom CSS
+	link(href='/css/custom.css')
 	// Theme CSS
 	link(href='/css/clean-blog.min.css', rel='stylesheet')
 	// Custom Fonts
