Fixed some functionality to render all user postings when profile is being accessed with URL, also some details about showing authors of postings

--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -20,7 +20,7 @@ html(lang='en')
 						each hit in allpostings
 							a(href=`/posts/${hit.id}`)
 								h2.post-title=hit.post
-								p.post-meta Posted by #{hit.user.name} on #{hit.createdAt}
-								hr
+								p.post-meta Posted by #{hit.user.name} at #{hit.createdAt}
+							hr
 	include references_footer.pug
 
