--- a/views/post.pug
+++ b/views/post.pug
@@ -13,7 +13,7 @@ html(lang='en')
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
 						.post-heading
 							h1#postingcontent=postingcontent
-							span.meta Posted by #{username} on #{createdAt}
+							span.meta Posted by #{username} on #{date}
 		.container
 			.row
 				.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
