--- a/views/profile.pug
+++ b/views/profile.pug
@@ -17,9 +17,9 @@ html(lang='en')
 			.row
 				.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
 					.post-preview
-						each hit in alluserpostings
+						each hit in posts
 							a(href=`/posts/${hit.id}`)
 								h2.post-title=hit.post
 								p.post-meta Created on #{hit.createdAt}
-								hr
+							hr
 	include references_footer.pug
