--- a/views/allpostings.pug
+++ b/views/allpostings.pug
@@ -12,7 +12,7 @@ html(lang='en')
 				.row
 					.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
 						.post-heading
-							h1 What other Avo-fans have to say
+							h1 What other Avocado-fans have to say...
 		.container
 			.row
 				.col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
@@ -21,6 +21,7 @@ html(lang='en')
 							a(href=`/posts/${hit.id}`)
 								h2.post-title=hit.post
 								p.post-meta Posted by #{hit.user.name} at #{hit.createdAt}
+								a(href=`/profile/${hit.user.name}`) Check out #{hit.user.name}'s profile
 							hr
 	include references_footer.pug
 
