--- a/views/references.pug
+++ b/views/references.pug
@@ -3,10 +3,10 @@ html(lang='en')
 	head
 	// Bootstrap Core CSS
 	link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
-	//Custom CSS
-	link(href='/css/custom.css')
 	// Theme CSS
 	link(href='/css/clean-blog.min.css', rel='stylesheet')
+	//Custom CSS
+	link(href='/css/custom.css', rel='stylesheet')
 	// Custom Fonts
 	link(href='/vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
 	link(href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic', rel='stylesheet', type='text/css')
