Added additional route to render personal profile

--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -15,7 +15,7 @@ head
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				ul.nav.navbar-nav.navbar-right
 					li
-						a(href=`/profile/${username}`) MY PROFILE
+						a(href='/myprofile') MY PROFILE
 					li
 						a(href='/addpost') ADD POST
 					li
