Added password check via bcrypt

--- a/views/addpost.pug
+++ b/views/addpost.pug
@@ -6,7 +6,7 @@ html(lang='en')
 		include navigation.pug
 		include references.pug
 		title Add A Post
-	body
+	body#bootstrap-overrides
 		header.intro-header(style="background-image: url('/img/avocadobg2-green.png')")
 			.container
 				.row
